@@ -24,11 +24,20 @@
 #include <stdio.h>
 #include <string.h>
 #include <ctype.h>
+#ifdef POPPLER_VERSION
+#define GString GooString
+#include <dirent.h>
+#include <poppler-config.h>
+#include <goo/GooString.h>
+#include <goo/gmem.h>
+#include <goo/gfile.h>
+#else
 #include <aconf.h>
 #include <GString.h>
 #include <gmem.h>
 #include <gfile.h>
 #include <assert.h>
+#endif
 #include "Object.h"
 #include "Stream.h"
 #include "Array.h"
